--- a/style.css
+++ b/style.css
@@ -40,3 +40,27 @@ button {
  color: #FDFDFD;
  background-color: #AC485A;
 }
+
+ul {
+ display: flex;
+ flex-wrap: wrap;
+ gap: 15px;
+ list-style-type: none;
+ padding: 0;
+ margin-top: 20px;
+}
+
+ul li {
+ list-style: none;
+ background-color: #FFFDF8;
+ padding: 12px;
+ box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
+ border-radius: 8px;
+ flex-grow: 1;
+ text-align: center;
+ font-size: 18px;
+}
+
+ul li:hover {
+ box-shadow: 0px 1px 4px rgba(0,0,0,0.4);
+}
