--- a/style.css
+++ b/style.css
@@ -15,12 +15,19 @@
  flex-direction: column;
 }
 
+.title {
+ text-align: center;
+ font-size: 30px;
+ margin: 10px auto;
+}
+
 img {
- width: 60%;
+ width: 30%;
  height: auto;
  margin: 20px auto;
  border-radius: 10%;
- border: 2px solid #AC485A;
+ border: 1px solid #1c1b3b;
+ box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
  padding: 20px;
 }
 
@@ -28,20 +35,22 @@ input, button{
  color: #432000;
  background-color: #DCE1EB;
  border: 0;
- padding: 15px;
+ padding: 10px;
  border-radius: 8px;
  font-size: 20px;
  text-align: center;
+ margin-top: 20px;
 }
 
 button {
  margin-top: 10px;
  color: #FDFDFD;
- background-color: #AC485A;
+ background-color: #1c1b3b;
 }
 
 button:hover {
- background-color: #432000;
+ background-color: #2e2d5c;
+ transition: 0.2s ease-in-out;
 }
 
 ul {
@@ -56,7 +65,7 @@ ul {
 ul li {
  list-style: none;
  background-color: #FFFDF8;
- padding: 12px;
+ padding: 10px;
  box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
  border-radius: 8px;
  flex-grow: 1;
@@ -67,4 +76,5 @@ ul li {
 ul li:hover {
  box-shadow: 0px 1px 4px rgba(0,0,0,0.4);
  background-color: #FFECC7;
+ transition: 0.2s ease-in-out;
 }
